# taiex-mxf-trading-dashboard

./: .env.example  .gitignore  20260607_change.md  API_test.ipynb  CLAUDE.md  NOTES.md  README.md  V2_plan.md  V3_plan.md  docker-compose.yml  imp.md  requests.md  three_strats.md  trade_strat_v1.md  trend_loss_analysis.docx  trend_loss_analysis.md  v1_trade.md  v2_trade.md  v3_trade.md  v4_plan.md  v5_plan.md
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  main.py
backend/scripts/: com.user.taiex-feed-liveness.plist  enrich_5m_alignment.py  exit_path_pathology.py  feed_liveness_check.sh  loss_heatmap_25cell.py  permutation_inference.py  purge_zero_ticks.py  replay_strategies.py  sweep_5m_alignment.py  trail_counterfactual.py  trend_analysis.py  trend_for_losses.py  trend_wins_losses.py  wipe_and_rebackfill.py
backend/tests/: test_admin_test_webhook.py  test_alerts_stats.py  test_backfill.py  test_backtest_cache.py  test_backtest_engine.py  test_bars_route.py  test_candle_direction.py  test_discord_notifier.py  test_finmind_adapter.py  test_indicators.py  test_insights_cache.py  test_insights_compare.py  test_insights_inline.py  test_insights_service.py  test_market_session.py  test_missed_entry_detector.py  test_notifier_hub.py  test_permutation_inference.py  test_position_tracker.py  test_resolutions_2m_10m.py  test_resolutions_3m.py  test_runner.py  test_shioaji_adapter.py  test_signals_route.py  test_status_route.py  test_strat_15k.py  test_strat_1k.py  test_strat_1k_ai.py  test_strat_30k.py  test_strategy_display_name.py  test_trade_strat_v1.py  (+6 more)
(+101 files in other folders)
